# adv-training-pipeline

./: main.py  pyproject.toml
configs/: default.yaml
noisy_agentdojo/: __init__.py  __main__.py  adapter.py  cli.py  config.py  models.py  noise_pipeline.py  utils.py  validation.py
noisy_agentdojo/layers/: __init__.py  base.py  calendar_contact.py  forwarded_thread.py  html_email.py  imessage_thread.py  mixed_language.py  voicemail_stt.py
noisy_agentdojo/templates/: email_forward.jinja2  email_signature.jinja2  html_corporate.jinja2  html_marketing.jinja2  html_newsletter.jinja2
tests/: conftest.py  test_adapter.py  test_noise_layers.py  test_pipeline.py  test_validation.py
